# taris-personal-project

./: .gitignore  ProjectHome.md
Benchmark/: Benchmark.py  Benchmark_gmp.py  Makefile  T-Bench.sublime-project  T-Bench.sublime-workspace  Torture.py  cpuinfo.py  factor_lib.py  factorial.py  factorial_adaptive.py  factorial_dnc.py  factorial_gmp.py  factorial_gmp_dnc.py  factorial_recur.py  factorial_seq.py  gfactor_lib.py  gfactorial.py  monty.py  setup.py  utils.py
Brownian_Monte_Carlo/: Brownian_Monte_Carlo.userprefs  Physics.cpp  Physics.hpp
DataStr/: Makefile  bintree.c  bintree.h  btree.c  btree.h  btreelist.c  btreelist.h  dict.c  dict.h  graph.c  graph.h  hash.c  hash.h  list.c  list.h  llist.h  rwe_trie.c  rwe_trie.h  search.c  search.h  test.c  test.cpp  test.h  trie.c  trie.h  tuple.c  tuple.h
DataStr/cpp11/: CMakeLists.txt  Makefile  octree.hpp  octree.tcc  qtree.hpp  qtree.tcc  test.cpp  test.hpp  trie.hpp  trie.tcc  utils.hpp
DataStr11/: Makefile  btree.cc  btree.h  btree.tcc  datastr11lib.sublime-workspace  list.cc  list.h  list.tcc  mesh.h  mesh.tcc  test.cc  test.h  utils.h
DecoratedOutput/: Makefile  decor_ouput.sublime-workspace  decor_output.cc  decor_output.h  test.cc
Hash/: Makefile  dict.c  dict.h  hash.c  hash.h  test.c
Hello/: .cproject  Hello.cpp
Matrix/: .editorconfig  Makefile  README  get_thrd_limit.c  test.c  test.h
Mesh/: .atom_build.yml  Makefile  btree.c  btree.h  build.sh  clean.sh  graph.c  graph.h  list.c  list.h  matrix.c  matrix.h  mesh.c  mesh.h  mesh3D.c  mesh3D.h  meshgen.c  meshgen.h  meshlib.sublime-workspace  (+8 more)
(+1162 files in other folders)
